fix scrollbar layout shift

--- a/app/globals.css
+++ b/app/globals.css
@@ -65,7 +65,9 @@
     --ring: 212.7 26.8% 83.9%;
   }
 }
-
+html {
+  scrollbar-gutter: stable;
+}
 @layer base {
   * {
     @apply border-border;
